add split rules check